# UDEOv3

UDEO/: Directory.Build.props  README.md  udeo.ps1  version.json
UDEO.CSharp/: Directory.Build.props  Dockerfile  UDEO.sln  build.ps1  build.sh  docker-compose.yml
UDEO.CSharp/examples/Compliance/: Program.cs  UDEO.Compliance.csproj
UDEO.CSharp/examples/LoanApproval/: Program.cs  UDEO.LoanApproval.csproj
UDEO.CSharp/examples/MarioGame/: Program.cs  UDEO.Mario.csproj
UDEO.CSharp/examples/QuickStart/: Program.cs  UDEO.QuickStart.csproj
UDEO.CSharp/src/UDEO.Cli/: CliBootstrap.cs  Program.cs  UDEO.Cli.csproj
UDEO.CSharp/src/UDEO.Core/: Enums.cs  UDEO.Core.csproj
UDEO.CSharp/src/UDEO.Experts/: ExpertExecutor.cs  ExpertRegistry.cs  PluginLoader.cs  UDEO.Experts.csproj
UDEO.CSharp/src/UDEO.Native/: NativePhysics.cs  UDEO.Native.csproj
UDEO.CSharp/src/UDEO.Native/Physics/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h
UDEO.CSharp/src/UDEO.Pipeline/: PipelineStep.cs  UDEO.Pipeline.csproj  UdeoPipeline.cs
UDEO/docker/: Dockerfile  docker-compose.yml
UDEO/domain-knowledge/: README.md
UDEO/engine/: UDEO.Engine.ps1  UDEO.Experts.ps1  UDEO.Pipeline.ps1  UDEO.Store.ps1  UDEO.Telemetry.ps1
UDEO/examples/: 01-quickstart.ps1  02-loan-approval.ps1  03-custom-expert.ps1  04-compliance-check.ps1
UDEO/plugins/: template.ps1
UDEOjs/: cli.js  engine.js  experts.js  index.js  package.json  pipeline.js  store.js  telemetry.js
UDEOjs/examples/: 01_quickstart.js  02_loan_approval.js  03_custom_expert.js  04_compliance_check.js
UDEOjs/plugins/: template.js
(+45 files in other folders)
